# example_libarchive

./: .gitmodules  CMakeLists.txt  README.md  libarchive_flags.cmake  main.c  output.tar.xz
example_directory/: Broken.xml  LargeStream (copy).xml  LiveTask (copy).xml  Prerec_finished.xml  Prerec_started (copy).xml  SmallContinuousStream (copy).xml  SmallStream (copy).xml  WeirdAsset.xml  loopnc.sh  loopnc2 (copy).sh
